tests/baselines/reference/jsxFactoryQualifiedNameResolutionError.errors.txt
tests/cases/compiler/test.tsx(9,17): error TS2304: Cannot find name 'MyElement'.


==== tests/cases/compiler/test.tsx (1 errors) ====
    declare module JSX {
        interface IntrinsicElements {
            [s: string]: any;
        }
    }
    
    export class AppComponent {
        render(createElement) {
            return <div />;
                    ~~~
!!! error TS2304: Cannot find name 'MyElement'.
        }
    }